# labs-cpp

lab1/: 1.cpp  2.cpp  example.cpp  training.cpp
lab2/: 1.cpp  CMakeLists.txt
lab2/include/: Logger.hpp  Triangle.hpp
lab2/logs/: logs
lab2/src/: Logger.cpp  Triangle.cpp  main.cpp
lab3/first_task/: CMakeLists.txt
lab3/first_task/src/: main.cpp
lab3/second_task/: CMakeLists.txt
lab3/second_task/src/: main.cpp
lab3/second_task/src/ArrayQueue/: ArrayQueue.hpp
lab3/second_task/src/LinkedQueue/: LinkedQueue.hpp
lab4/: CMakeLists.txt
lab4/src/: main.cpp
lab4/src/String/: String.cpp  String.hpp
lab4/src/StringD/: StringD.cpp  StringD.hpp
lab4/src/StringID/: StringID.cpp  StringID.hpp
